--- a/src/app/vehicle-card/vehicle-card.component.scss
+++ b/src/app/vehicle-card/vehicle-card.component.scss
@@ -3,17 +3,24 @@ $azul: #004BF6;
 $cinza: #C8CFD6;
 $azul-escuro: #00133E;
 
+$mobile-breakpoint: 768px;
+
 .azul-escuro {
   color: $azul-escuro;
 }
 
 .vehicle-card {
-  padding: 16px;
-  height: 190px;
+  padding: 8px;
+
   background: $branco 0% 0% no-repeat padding-box;
   border: 1px solid $cinza;
   border-radius: 4px;
   margin-bottom: 16px;
+
+  @media(min-width: $mobile-breakpoint) {
+    padding: 16px;
+    height: 190px;
+  }
 
   &:hover {
     border: 1px solid $azul;
@@ -24,9 +31,15 @@ $azul-escuro: #00133E;
   }
 }
 .vehicle-image {
-  width: 220px;
-  height: 158px;
+  @media(min-width: $mobile-breakpoint) {
+    width: 220px;
+    height: 158px;
+
+  }
+
   border-radius: 4px;
+  width: 132px;
+  min-width: 132px;
 }
 
 .por-publicar {
@@ -51,16 +64,16 @@ $azul-escuro: #00133E;
 .info-text {
   font: normal normal normal 14px/19px Roboto;
 }
-.margin-r-16 {
-  margin-right: 16px;
-}
 
 .price-label {
   font: normal normal normal 12px/16px Roboto;
   color: $azul-escuro;
 }
 .price-value {
-  width: 110px;
+  @media(min-width: $mobile-breakpoint) {
+    width: 110px;
+  }
+  width: 100%;
   height: 25px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   border: 1px solid $cinza;
@@ -79,4 +92,8 @@ $azul-escuro: #00133E;
 
   font: normal normal bold 12px/15px Roboto;
   width: 110px;
+}
+
+.form-check-input {
+  margin-top: 0;
 }
